Fix gradient not covering entire background

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -38,7 +38,6 @@ form {
   padding-top: 20px;
   padding-left: 20px;
   font-size: 20px;
-  display: inline;
 }
 
 footer {
@@ -47,23 +46,23 @@ footer {
 }
 
 .home hr {
-  width: 20%
+  width: 20%;
 }
 
 body {
   margin-left: 195px;
   background-color: #07222E;
-  background-image:linear-gradient(
+  background-image: linear-gradient(
     rgba(0, 0, 10, 0.6),
     rgba(0, 0, 10, 0.6)
   ), url('../images/background.jpg');
   background-size: cover;
   background-repeat: no-repeat;
-  /* height: auto; */
+  height: auto;
   min-height: 100%;
   min-width: 100%;
   max-width: 200%;
-  /* position: fixed; */
+  position: fixed;
   top: 0;
   left: 0;
   color: white;
